force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Include_Details_in_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Include_Details_in_Event_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for SF-1696</description>
    <inlineHelpText>Check this box to include all meeting details in the Description field on the Event created when an appointment is booked.</inlineHelpText>
    <label>Include Details in Event Description</label>
    <type>Checkbox</type>
</CustomField>