force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Invitation_Template__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation_Template__c</fullName>
    <label>Invitation Template Unique Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>