force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__NoShow_Template_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__NoShow_Template_Unique_Name__c</fullName>
    <label>NoShow Template Unique Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>