force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Outlook_Invite__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Outlook_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use a calendar .ics file once the meeting is scheduled.  If not selected, a plain .ics will be used instead.</inlineHelpText>
    <label>Use Calendar Invite</label>
    <type>Checkbox</type>
</CustomField>