force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Send_Cancelation_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Send_Cancelation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All invitees will be emailed when a meeting is canceled</inlineHelpText>
    <label>Send Cancelation Email</label>
    <type>Checkbox</type>
</CustomField>