force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Send_Completion_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Send_Completion_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will email all invitees when a meeting is completed</inlineHelpText>
    <label>Send Completion Email</label>
    <type>Checkbox</type>
</CustomField>