force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Send_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Send_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether all meeting participants will receive an email upon the confirmation of a meeting</description>
    <inlineHelpText>Denotes whether all meeting participants will receive an email upon the confirmation of a meeting</inlineHelpText>
    <label>Send Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>