force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Send_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Send_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will send all invitees a reminder email</inlineHelpText>
    <label>Send Reminder Email</label>
    <type>Checkbox</type>
</CustomField>