force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Use_Generic_Email_for_Organizer__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Use_Generic_Email_for_Organizer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when using an email client such as Gmail or G Suite that will not automatically process an .ics file when the organizer in the file is the same as the recipient&#39;s email address.</inlineHelpText>
    <label>Use Generic Email for Organizer</label>
    <type>Checkbox</type>
</CustomField>