force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__Use_Organizer_as_From_in_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Use_Organizer_as_From_in_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option if you would like email for meetings to be sent from the Organizer instead of the current user.  The option only has an effect when the Organizer has their address defined and verified in Org-Wide Email Addresses.</inlineHelpText>
    <label>Use Organizer as From in Email</label>
    <type>Checkbox</type>
</CustomField>