force-app/main/default/objects/TimeTrade_SF1__Invitation_Template__c/fields/TimeTrade_SF1__WebEx_Request__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__WebEx_Request__c</fullName>
    <description>If you need to customize the request to WebEx for creating WebEx meetings, specify a value in this field. Care must be taken that the value is syntactically correct. Refer to TimeTrade documentation as needed.</description>
    <inlineHelpText>If you need to customize the request to WebEx for creating WebEx meetings, specify a value in this field. Care must be taken that the value is syntactically correct. Refer to TimeTrade documentation as needed.</inlineHelpText>
    <label>WebEx Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>